--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,5 +1,38 @@
 workflows:
-  workflow-name:
+  ios-workflow:
+    name: Build iOS App
     environment:
       groups:
-        - GEMINI_API_KEY
+        - $GEMINI_API_KEY
+      xcode: latest
+    scripts:
+      - name: Set up keychain
+        script: |
+          security create-keychain -p "" build.keychain
+          security list-keychains -d user -s build.keychain
+          security default-keychain -s build.keychain
+          security unlock-keychain -p "" build.keychain
+          security set-keychain-settings -t 3600 -u build.keychain
+      - name: Install dependencies
+        script: |
+          gem install bundler
+          bundle install
+          bundle exec pod install
+      - name: Build iOS App
+        script: |
+          xcodebuild \
+            -workspace ios/Runner.xcworkspace \
+            -scheme Runner \
+            -sdk iphoneos \
+            -configuration Release \
+            -archivePath $HOME/build/Runner.xcarchive \
+            archive
+      - name: Export .ipa file
+        script: |
+          xcodebuild -exportArchive \
+            -archivePath $HOME/build/Runner.xcarchive \
+            -exportPath $HOME/build \
+            -exportOptionsPlist ios/ExportOptions.plist
+    artifacts:
+      - build/**/*.ipa
+
