--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,36 +3,25 @@ workflows:
     name: Build iOS App
     environment:
       groups:
-        - $GEMINI_API_KEY
+        - api_token
       xcode: latest
     scripts:
-      - name: Set up keychain
-        script: |
-          security create-keychain -p "" build.keychain
-          security list-keychains -d user -s build.keychain
-          security default-keychain -s build.keychain
-          security unlock-keychain -p "" build.keychain
-          security set-keychain-settings -t 3600 -u build.keychain
-      - name: Install dependencies
-        script: |
-          gem install bundler
-          bundle install
-          bundle exec pod install
-      - name: Build iOS App
-        script: |
-          xcodebuild \
-            -workspace ios/Runner.xcworkspace \
-            -scheme Runner \
-            -sdk iphoneos \
-            -configuration Release \
-            -archivePath $HOME/build/Runner.xcarchive \
-            archive
-      - name: Export .ipa file
-        script: |
-          xcodebuild -exportArchive \
-            -archivePath $HOME/build/Runner.xcarchive \
-            -exportPath $HOME/build \
-            -exportOptionsPlist ios/ExportOptions.plist
+      - name: Set up code signing settings on Xcode project
+        script: | 
+          xcode-project use-profiles
+      - name: Get Flutter packages
+        script: | 
+          flutter packages pub get
+      - name: Install pods
+        script: | 
+          find . -name "Podfile" -execdir pod install \;
+      - name: Flutter build ipa
+        script: | 
+          flutter build ipa --release \
+            --build-name=1.0.0 \
+            --export-options-plist=/Users/builder/export_options.plist
     artifacts:
-      - build/**/*.ipa
+      - build/ios/ipa/*.ipa
+      - /tmp/xcodebuild_logs/*.log
+      - flutter_drive.log
 
